update: improve responsive spacing and projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="container">
             <div class="logo">Sandeep</div>
             <ul class="nav-links">
-                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#hero-section" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -24,12 +24,21 @@
             </ul>
             <div class="hamburger-menu" id="mobile-menu-button"><i class="fas fa-bars"></i></div> <!-- Mobile menu button -->
         </nav>
+        <div class="mobile-nav hidden">
+  <a href="#hero-section">Home</a>
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#experience">Experience</a>
+  <a href="#projects">Project</a>
+  <a href="#contact">Know More</a>
+</div>
+
     </header>
 
     <main>
         <!-- Hero Section -->
         <section id="hero-section">
-            <div class="hero-content">
+            <div class="container hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">Hi, I'm <span class="hero-name">Sandeep</span></h1>
                     <h2 class="hero-subtitle">A <span id="role" class="typewriter"></span></h2>
@@ -72,19 +81,18 @@
             </div>
 
             <div class="about-content">
-                <h3>Full Stack Developer based in <span class="text-white">India</span></h3>
+                <h3>Front End Developer based in <span class="text-white">India</span></h3>
                 
                 <p class="about-text">
-                    I'm a dedicated web developer who has spent the past year immersed in creating modern, responsive web applications. My journey began with a fascination for how technology can solve real-world problems, and it has evolved into a passion for crafting elegant digital solutions.
-                    I believe in writing clean, maintainable code and staying current with industry best practices. My approach combines technical expertise with a user-centered mindset, ensuring that every project not only functions flawlessly but also delivers an exceptional user experience. 
+                    I'm a Front End Developer with 1 year of experience building modern, responsive websites and web pages. I work with HTML, CSS, JavaScript, PHP, and WordPress, and I enjoy turning designs into clean, fast, user-friendly interfaces.
                 </p>
                 
                 <p class="about-text">
-                    When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or sharing knowledge with the developer community. I'm always eager to take on new challenges and collaborate on innovative projects.
+                    My focus is writing maintainable code, improving performance, and making sure every site works smoothly across devices. Whether it's customizing WordPress themes, fixing UI issues, or adding new features, I like solving problems and shipping polished results.
                 </p>
 
                 <div class="about-buttons">
-                    <a href="#resume" class="btn-primary">Download CV <i class="fas fa-download"></i></a>
+                    <a href="/Sandeep_CV-26.pdf" class="btn-primary">Download CV <i class="fas fa-download"></i></a>
                 </div>
             </div>
         </div>
@@ -163,6 +171,7 @@
         </div>
     </div>
 </section>
+
 <section id="projects" class="section-padding">
   <div class="container">
     <h2 class="section-title">Projects</h2>
@@ -190,7 +199,7 @@
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Hero-img.png" alt="Project 2" class="project-image" />
+            <img src="/Jarvis.png" alt="Project 2" class="project-image" />
             <div class="project-title">Project Name</div>
           </div>
           <div class="card-face card-back">
@@ -206,7 +215,7 @@
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Hero-img.png" alt="Project 3" class="project-image" />
+            <img src="/Digital-Watch.jpeg" alt="Project 3" class="project-image" />
             <div class="project-title">Project Name</div>
           </div>
           <div class="card-face card-back">
@@ -222,7 +231,7 @@
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Hero-img.png" alt="Project 4" class="project-image" />
+            <img src="/Ping-Pong-game.jpeg" alt="Project 4" class="project-image" />
             <div class="project-title">Project Name</div>
           </div>
           <div class="card-face card-back">
