--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h2 class="hero-subtitle">A <span id="role" class="typewriter"></span></h2>
                     <p class="hero-description">Crafting beautiful, functional web experiences with clean code and modern technologies. Passionate about solving problems and creating digital solutions that make a difference.</p>
                     <div class="cta-buttons">
-                        <a href="#projects" class="view-projects">View Projects</a>
+                        <a href="/Sandeep_CV-26.pdf" class="view-projects">Download CV</a>
                         <a href="#contact" class="contact-me">Contact Me</a>
                     </div>
                 </div>
@@ -62,7 +62,6 @@
                 <div class="image-frame">
                     <img src="https://picsum.photos/600/600?grayscale" alt="Sandeep Saini" class="profile-pic">
                 </div>
-                <div class="image-glow"></div>
                 <div class="stats-grid">
     <div class="stat-item">
         <i class="fas fa-code stat-icon"></i>
@@ -177,20 +176,26 @@
     <h2 class="section-title">Projects</h2>
 
     <div class="projects-grid">
+
       <!-- Card 1 -->
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/weather app1.png" alt="Project 1" class="project-image" />
-            <div class="project-title">Weather App</div>
+            <div class="project-frame">
+              <div class="project-image-box">
+                <img src="/weather app1.png" alt="Weather App" class="project-image">
+              </div>
+              <div class="project-title">Weather App</div>
+            </div>
           </div>
 
           <div class="card-face card-back">
             <h3 class="back-title">Weather App</h3>
             <p class="project-details">
-              Developed a weather application using HTML, CSS, and JavaScript.
-
-              Implemented dynamic updates of weather conditions and forecasts.            </p>
+              Developed a responsive weather application using HTML, CSS, and JavaScript.
+              Users can search cities to view real-time temperature, weather conditions,
+              and forecast data with a clean and user-friendly interface.
+            </p>
           </div>
         </div>
       </div>
@@ -199,29 +204,42 @@
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Jarvis.png" alt="Project 2" class="project-image" />
-            <div class="project-title">Project Name</div>
+            <div class="project-frame">
+              <div class="project-image-box">
+                <img src="/Jarvis.png" alt="Jarvis Assistant" class="project-image">
+              </div>
+              <div class="project-title">Jarvis Assistant</div>
+            </div>
           </div>
+
           <div class="card-face card-back">
-            <h3 class="back-title">Project Name</h3>
+            <h3 class="back-title">Jarvis Assistant</h3>
             <p class="project-details">
-              A brief description of the project, what technologies were used, and its features.
+              Built a browser-based virtual assistant interface using HTML, CSS, and JavaScript.
+              Implemented interactive command responses and a modern UI to simulate
+              assistant-like behavior.
             </p>
           </div>
         </div>
       </div>
 
-      <!-- Card 3 -->
+      <!-- Card 3  -->
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Digital-Watch.jpeg" alt="Project 3" class="project-image" />
-            <div class="project-title">Project Name</div>
+            <div class="project-frame">
+              <div class="project-image-box">
+                <img src="/discuss-project.png" alt="Discuss Q&A Platform" class="project-image">
+              </div>
+              <div class="project-title">Discuss Q&A Platform</div>
+            </div>
           </div>
+
           <div class="card-face card-back">
-            <h3 class="back-title">Project Name</h3>
+            <h3 class="back-title">Discuss Q&A Platform</h3>
             <p class="project-details">
-              A brief description of the project, what technologies were used, and its features.
+              Built a PHP-based Q&A platform with login/logout functionality where users can post questions, browse categories, and answer others through a clean and simple interface.
+
             </p>
           </div>
         </div>
@@ -231,21 +249,29 @@
       <div class="project-card">
         <div class="card-inner">
           <div class="card-face card-front">
-            <img src="/Ping-Pong-game.jpeg" alt="Project 4" class="project-image" />
-            <div class="project-title">Project Name</div>
+            <div class="project-frame">
+              <div class="project-image-box">
+                <img src="/Ping-Pong-game.jpeg" alt="Ping Pong Game" class="project-image">
+              </div>
+              <div class="project-title">Ping Pong Game</div>
+            </div>
           </div>
+
           <div class="card-face card-back">
-            <h3 class="back-title">Project Name</h3>
+            <h3 class="back-title">Ping Pong Game</h3>
             <p class="project-details">
-              A brief description of the project, what technologies were used, and its features.
+              Created a classic ping pong game using JavaScript with real-time ball
+              movement, collision detection, and score tracking. Focused on smooth
+              gameplay and responsive controls.
             </p>
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
+
 
 <section id="contact" class="section-padding">
   <div class="container">
@@ -262,17 +288,17 @@
           <span>Email</span>
         </a>
 
-        <a href="#" class="contact-btn">
+        <a href="linkedin.com/in/sandeep-saini-181524376" class="contact-btn">
           <i class="fab fa-linkedin-in"></i>
           <span>LinkedIn</span>
         </a>
 
-        <a href="#" class="contact-btn">
+        <a href="https://github.com/be-sandeepsaini" class="contact-btn">
           <i class="fab fa-github"></i>
           <span>GitHub</span>
         </a>
 
-        <a href="#" class="contact-btn">
+        <a href="https://wa.me/919876543210" target="_blank" rel="noopener noreferrer" class="contact-btn">
           <i class="fab fa-whatsapp"></i>
           <span>WhatsApp</span>
         </a>
@@ -290,10 +316,10 @@
     </p>
 
     <div class="footer-socials">
-      <a href="#" aria-label="GitHub">
+      <a href="https://github.com/be-sandeepsaini" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
-      <a href="#" aria-label="LinkedIn">
+      <a href="linkedin.com/in/sandeep-saini-181524376" target="_blank" aria-label="LinkedIn">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <a href="#" aria-label="Twitter">
